--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ pytest==6.2.2
 pytest-mock==3.5.1
 pytest-responsemock==1.0.1
 pytest-randomly==3.5.0  # Pytest suite will run in random order.
+pytest-cov==2.11.1
