Add Django 3.1.6 to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@
 # TODO: MOve this file to /backend/ after dockerization.
 
 requests==2.25.1
+django==3.1.6
 jinja2==2.11.3
 apscheduler==3.7.0
+
 pytest==6.2.2
 pytest-mock==3.5.1
 pytest-responsemock==1.0.1
