Extend pytest config

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,9 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = backend.django_settings.settings
 python_files = tests.py test_*.py *_tests.py
+norecursedirs = .git venv* requirements* .mypy_cache
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+addopts =
+  # Tests run in PyCharm console will also display colors.
+  --color=yes
