--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pycoingecko==1.4.0
 
 pytest==6.2.2
 pytest-django==4.1.0
+pytest-pythonpath==0.7.3
 pytest-mock==3.5.1
 pytest-responsemock==1.0.1
 pytest-randomly==3.5.0  # Pytest suite will run in random order.
