--- a/pytest.ini
+++ b/pytest.ini
@@ -7,4 +7,4 @@ markers =
 addopts =
   # Tests run in PyCharm console will also display colors.
   --color=yes
-python_paths = backend
+python_paths = backend/
