--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = backend.django_settings.settings
+DJANGO_SETTINGS_MODULE = backend.django_settings.settings.dev
 python_files = tests.py test_*.py *_tests.py
 norecursedirs = .git venv* requirements* .mypy_cache
 markers =
