--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,8 @@
 # TODO: MOve this file to /backend/ after dockerization.
 
 django-on-heroku==1.1.2
+whitenoise==4.1.4
+dj-database-url==0.5.0
 
 requests==2.25.1
 django==3.1.7
