--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,21 @@ venv
 __pycache__
 secrets.py
 .pytest_cache
+
+/node_modules
+/.pnp
+.pnp.js
+
+/coverage
+
+/build
+
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
