--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": "14.x"
   },
   "private": true,
+  "build": "cd client && react-scripts build",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
