--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,11 +3,12 @@
 exclude: '^migrations/'
 repos:
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.770
-    hooks:
-      - id: mypy   # Check typing correctness
-        args: [--python-version=3.8, --no-warn-no-return]
+# TODO
+#   - repo: https://github.com/pre-commit/mirrors-mypy
+#     rev: v0.770
+#     hooks:
+#       - id: mypy   # Check typing correctness
+#         args: [--python-version=3.8, --no-warn-no-return]
 
   - repo: https://github.com/asottile/reorder_python_imports
     rev: v2.3.0
@@ -35,8 +36,9 @@ repos:
       - id: check-yaml   # Check YML syntax
       - id: detect-private-key   # Prevent committing private keys
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: '3.7.9'
-    hooks:
-    - id: flake8   # Ensure flake8 consistency
-      types: [python]
+# TODO
+#   - repo: https://gitlab.com/pycqa/flake8
+#     rev: '3.7.9'
+#     hooks:
+#     - id: flake8   # Ensure flake8 consistency
+#       types: [python]
