--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 # TODO: MOve this file to /backend/ after dockerization.
 
 django-on-heroku==1.1.2
+django-cors-headers==3.7.0
 
 requests==2.25.1
 django==3.1.7
