--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "cd app && react-scripts start",
+    "start": "pwd && ls && react-scripts start",
     "build": "cd frontend && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
