--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "cd /app && ls && react-scripts start",
-    "build": "cd frontend && react-scripts build",
+    "build": "react-scripts build frontend",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
