--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "cd /app && ls && react-scripts start",
-    "build": "react-scripts build frontend",
+    "start": "cd /app/frontend && ls && react-scripts start",
+    "build": "cd frontend && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
